# Personal-AI-Agent

./: .env.example  .gitignore  DECISIONS.md  README.md  app.py  pyproject.toml
docs/: personal-assistant-docs.html
support_agent/personal_assistant/: db.py  graph.py  nodes.py  state.py  tools.py
